create the posts page and import data from local server

--- a/client/src/index.css
+++ b/client/src/index.css
@@ -7,4 +7,8 @@ body {
 
 #root {
   width: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
 }
