--- a/client/src/App.css
+++ b/client/src/App.css
@@ -5,3 +5,13 @@ main {
   justify-content: space-around;
   align-items: center;
 }
+
+@media only screen and (max-width: 600px) {
+  main {
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+  }
+}
