--- a/client/src/style/Header.css
+++ b/client/src/style/Header.css
@@ -21,3 +21,9 @@
   height: 4rem;
   border-radius: 0.2rem;
 }
+
+@media only screen and (max-width: 600px) {
+  #nainHeader {
+    width: 100%;
+  }
+}
