Adding an image to a post on the client side

--- a/client/src/style/Post.css
+++ b/client/src/style/Post.css
@@ -36,6 +36,11 @@
   font-family: Times New Roman;
 }
 
+#postImages {
+  width: 100%;
+  height: 18rem;
+}
+
 #postFoter {
   display: flex;
   flex-direction: row;
