Adding login and registration pages and smooth routing between pages

--- a/client/src/style/SignUp.css
+++ b/client/src/style/SignUp.css
@@ -1,4 +1,4 @@
-#loginPage {
+#signupPage {
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -9,38 +9,38 @@
   margin: 3rem;
 }
 
-#loginForm {
+#signForm {
   display: flex;
   flex-direction: column;
   justify-content: space-around;
   align-items: start;
-  height: 40%;
+  height: 70%;
 }
 
-.loginInput,
-.loginLable,
-#loginBtn {
+.signInput,
+.signLable,
+#signBtn {
   width: 20rem;
   color: rgb(42, 45, 79);
   font-size: larger;
   font-family: Courier New;
 }
 
-.loginLable {
+.signLable {
   display: flex;
   flex-direction: column;
   gap: 0.5rem;
   font-weight: bold;
 }
 
-.loginInput {
+.signInput {
   height: 2.5rem;
   border-radius: 0.6rem;
   border: none;
   box-shadow: rgba(0, 0, 0, 0.12) 0px 1px 3px, rgba(0, 0, 0, 0.24) 0px 1px 2px;
 }
 
-#loginBtn {
+#signBtn {
   height: 2.5rem;
   background-color: rgb(42, 45, 79);
   color: white;
@@ -48,8 +48,8 @@
   border-radius: 0.8rem;
 }
 
-#loginBtn:hover,
-.loginInput:hover {
+#signBtn:hover,
+.signInput:hover {
   box-shadow: rgba(0, 0, 0, 0.3) 0px 19px 38px,
     rgba(0, 0, 0, 0.22) 0px 15px 12px;
 }
