--- a/client/src/style/ConnectPage.css
+++ b/client/src/style/ConnectPage.css
@@ -1,4 +1,4 @@
-#loginPage {
+#connectPage {
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -9,38 +9,18 @@
   margin: 3rem;
 }
 
-#loginForm {
+#connForm {
   display: flex;
   flex-direction: column;
   justify-content: space-around;
   align-items: start;
-  height: 40%;
+  height: 30%;
 }
 
-.loginInput,
-.loginLable,
-#loginBtn {
+.connBtn {
   width: 20rem;
-  color: rgb(42, 45, 79);
   font-size: larger;
   font-family: Courier New;
-}
-
-.loginLable {
-  display: flex;
-  flex-direction: column;
-  gap: 0.5rem;
-  font-weight: bold;
-}
-
-.loginInput {
-  height: 2.5rem;
-  border-radius: 0.6rem;
-  border: none;
-  box-shadow: rgba(0, 0, 0, 0.12) 0px 1px 3px, rgba(0, 0, 0, 0.24) 0px 1px 2px;
-}
-
-#loginBtn {
   height: 2.5rem;
   background-color: rgb(42, 45, 79);
   color: white;
@@ -48,8 +28,7 @@
   border-radius: 0.8rem;
 }
 
-#loginBtn:hover,
-.loginInput:hover {
+.connBtn:hover {
   box-shadow: rgba(0, 0, 0, 0.3) 0px 19px 38px,
     rgba(0, 0, 0, 0.22) 0px 15px 12px;
 }
